Fix wrapping issue for links inside code tags.

--- a/src/htdocs/css/feedPages.scss
+++ b/src/htdocs/css/feedPages.scss
@@ -8,3 +8,7 @@ img.screenshot {
 dl.kml-description > dt {
 	margin: 1em 0 0;
 }
+
+pre > code > a {
+  word-wrap: normal;
+}
